--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -23,3 +23,14 @@
     margin: 10px;
   }
 }
+
+.error-list {
+  margin-bottom: 40px;
+  color: #A94442;
+}
+
+.field_with_errors {
+  input {
+    border-color: #A94442;
+  }
+}
