Create Integration test for authentication workflow.

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -6,3 +6,9 @@
   height: 60px;
   background-color: #f5f5f5;
 }
+
+.nav-nolink {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin: 0 10px;
+}
