--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,7 +16,8 @@
               <h4><%= post.title %></h4>
             </div>
             <div class="panel-body">
-              <p><%= post.body_truncated %><p>
+
+              <p><%= render html: post.body_truncated.html_safe %></p>
 
               <%= link_to 'Show', post, class: 'btn btn-default' %></td>
               <td><%= link_to 'Edit', edit_post_path(post), class: 'btn btn-default' %></td>
