--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,9 +19,12 @@
 
               <p><%= render html: post.body_truncated.html_safe %></p>
 
-              <%= link_to 'Show', post, class: 'btn btn-default' %></td>
-              <td><%= link_to 'Edit', edit_post_path(post), class: 'btn btn-default' %></td>
-              <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default' %></td>
+
+              <div class="post-btns-box">
+                <%= link_to 'Show', post, class: 'btn btn-default' %></td>
+                <td><%= link_to 'Edit', edit_post_path(post), class: 'btn btn-default' %></td>
+                <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-default' %></td>
+              </div>
             </div>
           </div>
         </div>
