--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -18,7 +18,8 @@
   </div>
   <div class="form-group">
     <%= f.label :body %><br>
-    <%= f.cktext_area :body, rows: 10 %>
+
+    <%= f.text_area :body, :class => 'ckeditor' %>
   </div>
   <div class="form-group">
     <%= f.submit 'Update Post', class: 'btn btn-success' %>
