Anonymous users can read all posts.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,8 +5,8 @@
   the modern power tools to build kickass web apps. If you are a developer you will love it, easy to extend, easy to
   customize. Need more arguments ?</p>
   <div class="account-btns">
-    <a href="#" class="btn btn-primary btn-lg">
-      <span class="glyphicon glyphicon-th-list"></span> <span class="text-btn">Learn more</span>
+    <a href="/posts" class="btn btn-primary btn-lg">
+      <span class="glyphicon glyphicon-th-list"></span> <span class="text-btn">See posts</span>
     </a>
   </div>
 </div>
