--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,20 +1,31 @@
 <div class="row">
   <div class="col-md-12">
 
-    <% if notice %>
-    <div class="alert alert-info" role="alert">
-      <p id="notice"><%= notice %></p>
-    </div>
-    <% end %>
+    <% if signed_in? %>
 
-    <h2><%= @post.title %></h2>
-    <p><%= render html: @post.body.html_safe %></p>
+      <% if notice %>
+      <div class="alert alert-info" role="alert">
+        <p id="notice"><%= notice %></p>
+      </div>
+      <% end %>
+
+      <h2><%= @post.title %></h2>
+      <p><%= render html: @post.body.html_safe %></p>
 
 
-    <div class="post-btns">
-      <%= link_to 'Edit', edit_post_path(@post), class: "btn btn-info" %>
+      <div class="post-btns">
+        <%= link_to 'Edit', edit_post_path(@post), class: "btn btn-info" %>
+        <%= link_to 'Back', posts_path, class: 'btn btn-default' %>
+      </div>
+
+    <% else %>
+
+      <h2><%= @post.title %></h2>
+      <p><%= render html: @post.body.html_safe %></p>
+
       <%= link_to 'Back', posts_path, class: 'btn btn-default' %>
-    </div>
+
+    <% end %>
 
   </div>
 </div>
