--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-left">
           <li><a href="/admin">Admin</a></li>
+          <li><a href="/posts">Posts</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <% if signed_in? %>
